--- a/final-project/style.css
+++ b/final-project/style.css
@@ -243,8 +243,8 @@ h3 {
 		top: 80%;
 		width: 0%;
 		height: 1px;
-		z-index: 100;
-		border-radius: 1px solid white;
+		z-index: 1000;
+		border: 1px solid white;
 	}
 }
 
@@ -271,7 +271,7 @@ section.contact {
 			left: 0;
 			width: 0%;
 			height: 1px;
-			border-radius: 1px solid #393939;
+			border: 1px solid #393939;
 		}
 		.line-bottom {
 			bottom: 0;
@@ -279,7 +279,7 @@ section.contact {
 		}
 	}
 
-	hr {
+	h4 {
 		font-size: clamp(2rem, 4vw, 5rem);
 		margin: 0;
 	}
